# mafuyu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  beatsaver.json  cdk.json  compose.override.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  ci.yml  deploy.yml
aws_cdk/: stack.ts
codedeploy/: appspec.yml  compose.override.yaml  compose.yaml
codedeploy/hooks/: ApplicationStart.sh  ApplicationStop.sh
infrastructure/: index.ts
src/: commands.rs  main.rs  services.rs
src/commands/: autocomplete.rs  helpers.rs  misc.rs  mod.rs
src/commands/autocomplete/: beatsaver.rs
src/commands/beatsaber/: beatsaver.rs
src/commands/helpers/: mapembed.rs  truncate.rs
src/commands/misc/: status.rs  sync.rs
src/services/: beatsaver.rs
src/services/beatsaver/: api.rs  map.rs  mod.rs
