[package]
name = "mafuyu"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current"}
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
